--- a/src/app/components/add-book/add-book.component.html
+++ b/src/app/components/add-book/add-book.component.html
@@ -3,21 +3,38 @@
     <form [formGroup]="bookForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label>Name</label>
-        <input class="form-control" type="text" formControlName="name" required>
+        <input
+          class="form-control"
+          type="text"
+          formControlName="name"
+          required
+        />
       </div>
 
       <div class="form-group">
         <label>Price</label>
-        <input class="form-control" type="text" formControlName="price" required>
+        <input
+          class="form-control"
+          type="text"
+          formControlName="price"
+          required
+        />
       </div>
 
       <div class="form-group">
         <label>Description</label>
-        <input class="form-control" type="text" formControlName="description" required>
+        <input
+          class="form-control"
+          type="text"
+          formControlName="description"
+          required
+        />
       </div>
 
       <div class="form-group">
-        <button class="btn btn-primary btn-block" type="submit">Add Book</button>
+        <button class="btn btn-primary btn-block" type="submit">
+          Add Book
+        </button>
       </div>
     </form>
   </div>
