--- a/src/app/components/books-list/books-list.component.html
+++ b/src/app/components/books-list/books-list.component.html
@@ -22,8 +22,15 @@
           <td>{{ book.price }}</td>
           <td>{{ book.description }}</td>
           <td class="text-center">
-            <button class="btn btn-sm btn-primary" routerLink="/edit-book/{{book._id}}">Edit</button>
-            <button class="btn btn-sm btn-danger" (click)="delete(book._id, i)">Delete</button>
+            <button
+              class="btn btn-sm btn-primary"
+              routerLink="/edit-book/{{ book._id }}"
+            >
+              Edit
+            </button>
+            <button class="btn btn-sm btn-danger" (click)="delete(book._id, i)">
+              Delete
+            </button>
           </td>
         </tr>
       </tbody>
