--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,14 @@
   <div id="navbarNav" class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/books-list">Show Books</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/books-list">
+          Show Books
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/add-book">Add Book</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/add-book">
+          Add Book
+        </a>
       </li>
     </ul>
   </div>
