--- a/src/app/components/book-detail/book-detail.component.html
+++ b/src/app/components/book-detail/book-detail.component.html
@@ -3,15 +3,30 @@
     <form [formGroup]="updateForm" (ngSubmit)="onUpdate()">
       <div class="form-group">
         <label>Name</label>
-        <input class="form-control" type="text" formControlName="name" required>
+        <input
+          class="form-control"
+          type="text"
+          formControlName="name"
+          required
+        />
       </div>
       <div class="form-group">
         <label>Price</label>
-        <input class="form-control" type="text" formControlName="price" required>
+        <input
+          class="form-control"
+          type="text"
+          formControlName="price"
+          required
+        />
       </div>
       <div class="form-group">
         <label>Description</label>
-        <input class="form-control" type="text" formControlName="description" required>
+        <input
+          class="form-control"
+          type="text"
+          formControlName="description"
+          required
+        />
       </div>
       <div class="form-group">
         <button class="btn btn-primary btn-block" type="submit">Update</button>
