--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">Angular 13 CRUD</a>
+  <a class="navbar-brand">Angular MEAN App</a>
   <div id="navbarNav" class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
